Fix particle visibility on black background

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@
 
 body,
 html {
-  background-color: #000 !important;
+  background-color: transparent !important;
   color: #f2f2f2;
   min-height: 100vh;
   width: 100%;
